session Css positionierung hinzugefügt

--- a/notes/10. css-positioning/css-positioning.html
+++ b/notes/10. css-positioning/css-positioning.html
@@ -144,7 +144,7 @@ These work differently depending on the positioning method.</p>
 absolutely positioned child element. By doing so, the child element will be placed absolutely inside
 this element.</p>
 
-<p><img src="/web-curriculum/sessions/css-positioning/assets/position-relative.png" alt="example for position relative" /></p>
+<p><img src="./position-relative.png" alt="example for position relative" /></p>
 
 <h2 id="position-absolute"><code class="language-plaintext highlighter-rouge">position: absolute</code></h2>
 
@@ -161,7 +161,7 @@ page.</p>
 <p>In the second example, the element is inside another element with <code class="language-plaintext highlighter-rouge">position: relative</code>. Therefore,
 the element is placed absolutely towards this element and not the entire page.</p>
 
-<p><img src="/web-curriculum/sessions/css-positioning/assets/position-absolute.png" alt="example for position absolute" /></p>
+<p><img src="./position-absolute.png" alt="example for position absolute" /></p>
 
 <hr />
 
@@ -171,7 +171,7 @@ the element is placed absolutely towards this element and not the entire page.</
 no gap in the page. An element with position fixed is not influenced by scrolling and therefore
 stays at the specified position. This is often used for navigation bars or “back to top” buttons.</p>
 
-<p><img src="/web-curriculum/sessions/css-positioning/assets/position-fixed.png" alt="example for position absolute" /></p>
+<p><img src="./position-fixed.png" alt="example for position absolute" /></p>
 
 <hr />
 
@@ -182,7 +182,7 @@ until it comes near the border of its scrolling container (normally the page its
 continues scrolling, a specified offset is enforced. The element sticks to this offset and appears
 like a fixed element.</p>
 
-<p><img src="/web-curriculum/sessions/css-positioning/assets/position-sticky.png" alt="example for position absolute" /></p>
+<p><img src="./position-sticky.png" alt="example for position absolute" /></p>
 
 <hr />
 
